# czrpc

./: .gitignore  .gitmodules  .hgignore  CMakeLists.txt  LICENSE  README.md  gen_2017_v140.bat  gen_vs2017.bat  gen_vs2019.bat  get_boost.bat  get_standalone_asio.bat  notepad_workspace  premake5.lua  prepare_standalone_development.bat  utils.cmake
UnitTest++/: CMakeLists.txt  unittestpp_vs2015.vcxproj  unittestpp_vs2015.vcxproj.filters
VisualStudio/: czrpc.sln
cmake/: utils.cmake
doc/: config.toml
doc/content/api/: connection.md  index.md  overview.md  paramtraits.md  result.md  table.md  transport.md
doc/content/credits/: index.md
doc/content/introduction/: a-small-taste.md  index.md  what-is-czrpc.md
doc/content/introduction/what-is-czrpc/: index.md
doc/layouts/partials/: logo.html
doc/themes/hugo-theme-learn/: LICENSE.md  README.md  theme.toml
doc/themes/hugo-theme-learn/archetypes/: chapter.md  default.md
doc/themes/hugo-theme-learn/layouts/: 404.html  index.html
doc/themes/hugo-theme-learn/layouts/_default/: single.html
doc/themes/hugo-theme-learn/layouts/partials/: favicon.html  footer.html  header.html  menu.html  script.html  style.html
doc/themes/hugo-theme-learn/static/css/: hugo-theme.css  perfect-scrollbar.min.css  theme.css
doc/themes/hugo-theme-learn/static/js/: hugo-learn.js  learn.js  perfect-scrollbar.jquery.min.js  perfect-scrollbar.min.js
samples/: CMakeLists.txt
samples/Benchmark/: Benchmark.cpp  Benchmark.vcxproj  Benchmark.vcxproj.filters  BenchmarkPCH.cpp  BenchmarkPCH.h
samples/CalculatorServer/: CMakeLists.txt  CalculatorInterface.h  CalculatorServer.cpp  CalculatorServer.vcxproj  CalculatorServer.vcxproj.filters  CalculatorServerPCH.cpp  CalculatorServerPCH.h
samples/Chat/ChatClient/: CMakeLists.txt  ChatClient.cpp  ChatClient.vcxproj  ChatClient.vcxproj.filters  ChatClientPCH.cpp  ChatClientPCH.h  stdafx.h
samples/Chat/ChatCommon/: CMakeLists.txt  ChatInterface.h  Utils.inl
samples/Chat/ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.vcxproj  ChatServer.vcxproj.filters  ChatServerPCH.cpp  ChatServerPCH.h  stdafx.cpp  stdafx.h
samples/Common/: CMakeLists.txt  CommonPCH.h  Misc.cpp  Misc.h  Parameters.cpp  Parameters.h  Semaphore.h  SimpleServer.h  StringUtil.cpp  StringUtil.h
samples/Minimal/: CMakeLists.txt  Minimal.cpp  MinimalPCH.cpp  MinimalPCH.h  _clang-format
samples/SamplesCommon/: CMakeLists.txt  Misc.cpp  Misc.h  Parameters.cpp  Parameters.h  SamplesCommon.vcxproj  SamplesCommon.vcxproj.filters  SamplesCommonPCH.cpp  SamplesCommonPCH.h  Semaphore.h  SimpleServer.h  StringUtil.cpp  StringUtil.h
samples/ServerConsole/: CMakeLists.txt  SampleUtils.h  ServerConsole.cpp  ServerConsole.vcxproj  ServerConsole.vcxproj.filters  ServerConsoleCommand.cpp  ServerConsoleCommand.h  ServerConsolePCH.cpp  ServerConsolePCH.h
source/: CMakeLists.txt  czrpc.vcxproj  czrpc.vcxproj.filters
source/crazygaze/rpc/: RPC.h  RPCAny.h  RPCAsioTransport.h  RPCBaseConnection.h  RPCCallstack.h  RPCConnection.h  RPCDummy.cpp  RPCExpected.h  RPCGenerate.h  RPCGenericServer.h  RPCLogger.h  RPCObjectData.h  RPCParamTraits.h  RPCProcessor.h  RPCProperties.h  RPCReply.h  RPCResult.h  RPCSpasTransport.h  RPCSpasTransportUtil.h  RPCStream.h  RPCTCPSocket.h  RPCTCPSocketTransport.h  RPCTable.h  RPCTransport.h  RPCUtils.h
tests/: CMakeLists.txt  Foo.cpp  Foo.h  Semaphore.h  targetver.h  tests.cpp  tests.vcxproj  tests.vcxproj.filters  testsPCH.cpp  testsPCH.h  tests_any.cpp  tests_doc_a_small_taste.cpp  tests_doc_paramtraits.cpp  tests_main.cpp  tests_rpc.cpp  tests_rpc_spas.cpp  tests_rpc_spas_helper.cpp  tests_rpc_spas_helper.h  tests_rpc_tcp.cpp  tests_tcpsocket.cpp  tests_traits.cpp
